fix discriminator duplicated property issue in yaml gnerated dtos
